test/ill-formed/0077_incomplete_struct_in_param.c
struct s;
void f (struct s a) {}

struct s {
  int x;
};
